# remote-shortcuts

./: Cargo.toml  LICENSE  README.md
autoarray/: Cargo.toml
autoarray/src/: lib.rs
src/: keys.rs  main.rs  server.rs  utils.rs
src/templates/: index.html
templates/: index.html
