[package]
name = "webcontrol"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }

[dependencies]
auto_array = { path="./autoarray" }
tide = { version = "0.8.1" }
smol = { version = "0.1" }
serde = { version = "1.0", features = ["derive"]}
qrcode = { version = "0.12" }
once_cell = "1.3.1"
get_if_addrs = "0.5"
